# gguri

./: .gitignore  IDENTITY.md  README.md  USER.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
automation/orchestrator/: CHECKLIST.md  CONTINUOUS_WORK_PATTERN.md  DISPATCHER.md  OBSERVABILITY.md  OPS_COMMANDS.md  PILOT_RUNBOOK.md  QUEUE.md  README.md  RELIABILITY_POLICY.md  RETRY_LOG_TEMPLATE.md  REVIEWER_GATE_POLICY.md  SOAK_TEST_PLAN.md  TEAM_MODE.md  TEST_MATRIX.md  TEST_STRATEGY.md  TMUX_QUICKSTART_KO.md  TOKEN_POLICY.md  WATCHDOG.md  check_consistency.sh  config.py  coupang_intake.py  db_store.py  dispatcher.py  enforce_guardrails.py  metrics_aggregate.py  migrate_md_to_db.py  nl_intake.py  ops.py  orch.py  render_queue_md.py  review_and_route.py  reviewer_gate.py  run_dashboard.sh  team_task_template.json  token_guardrails.py  ui_validate.py  watchdog.py
automation/orchestrator/db/: schema.sql
automation/orchestrator/logs/: orch_runs.jsonl
automation/orchestrator/pilot_logs/: ORCH-008-smoke-2026-02-07.md
automation/orchestrator/tests/: test_check_consistency_script.py  test_coupang_intake.py  test_db_store.py  test_dispatcher.py  test_enforce_guardrails.py  test_migrate_md_to_db.py  test_nl_intake.py  test_observability.py  test_ops.py  test_orch.py  test_render_queue_md.py  test_review_and_route_db.py  test_review_and_route_md.py  test_reviewer_gate.py  test_token_guardrails.py  test_ui_validate.py  test_watchdog.py
